--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.1",
+    "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.0.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.487.0",
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.289",
     "react-router-dom": "^7.4.1",
     "recharts": "^2.15.1",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
