--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.289",
     "react-router-dom": "^7.4.1",
